--- a/app/views/admin/purges/new.html.erb
+++ b/app/views/admin/purges/new.html.erb
@@ -10,32 +10,47 @@
       This tool removes all published posts from a specific group on FreeFeed. Posts will be marked as withdrawn but remain visible in the application.
     </p>
 
-    <%= form_with model: [:admin, :purge], url: admin_purges_path, local: true do |form| %>
-      <div class="mb-3">
-        <%= form.label :access_token_id, "Access Token", class: "form-label" %>
-        <%= form.select :access_token_id,
-                        options_from_collection_for_select(@access_tokens, :id, :name),
-                        { prompt: "Select an access token" },
-                        class: "form-select",
-                        required: true %>
-      </div>
+    <div data-controller="groups"
+         data-groups-loading-text-value="Loading..."
+         data-groups-default-text-value="Select the Freefeed group to purge"
+         data-groups-endpoint-value="<%= settings_access_token_groups_path(':access_token_id') %>"
+         data-groups-scope-value="purge">
+      <%= form_with url: admin_purges_path, scope: :purge, local: true do |form| %>
+        <div class="mb-3">
+          <%= form.label :access_token_id, "Access Token", class: "form-label" %>
+          <%= form.select :access_token_id,
+                          options_for_select(@access_tokens.map { |t| ["#{t.name} (#{t.host})", t.id] }, nil),
+                          { prompt: "Select an access token" },
+                          class: "form-select",
+                          data: { action: "change->groups#refresh", groups_target: "tokenSelect" },
+                          required: true %>
+        </div>
 
-      <div class="mb-3">
-        <%= form.label :target_group, "Target Group", class: "form-label" %>
-        <%= form.text_field :target_group,
-                           class: "form-control",
-                           placeholder: "e.g., mygroup",
-                           required: true %>
-        <div class="form-text">Enter the group username (without @ symbol)</div>
-      </div>
+        <div class="mb-3">
+          <%= form.label :target_group, "Target Group", class: "form-label" %>
+          <div id="groups-select">
+            <select name="purge[target_group]"
+                    id="purge_target_group"
+                    class="form-select"
+                    disabled
+                    data-groups-target="select">
+              <option value="">Choose target group...</option>
+            </select>
+            <div class="form-text" data-groups-target="helpText">
+              Select the Freefeed group to purge
+            </div>
+            <div class="invalid-feedback">Select a target group.</div>
+          </div>
+        </div>
 
-      <div class="d-flex justify-content-between">
-        <%= form.submit "Withdraw Group Posts",
-                       class: "btn btn-danger",
-                       data: {
-                         turbo_confirm: "Are you sure you want to withdraw all posts from this group? This will remove them from FreeFeed but they will remain in the app."
-                       } %>
-      </div>
-    <% end %>
+        <div class="d-flex justify-content-between">
+          <%= form.submit "Withdraw Group Posts",
+                         class: "btn btn-danger",
+                         data: {
+                           turbo_confirm: "Are you sure you want to withdraw all posts from this group? This will remove them from FreeFeed but they will remain in the app."
+                         } %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
