--- a/app/views/feeds/_reposting_form.html.erb
+++ b/app/views/feeds/_reposting_form.html.erb
@@ -7,7 +7,8 @@
     <div data-controller="groups"
          data-groups-loading-text-value="Loading..."
          data-groups-default-text-value="Select the Freefeed group where posts will be published"
-         data-groups-endpoint-value="<%= settings_access_token_groups_path(':access_token_id') %>">
+         data-groups-endpoint-value="<%= settings_access_token_groups_path(':access_token_id') %>"
+         data-groups-scope-value="feed">
       <%= form_with model: feed, class: "needs-validation", novalidate: true do |form| %>
   <%= hidden_field_tag :section, "reposting" %>
   <% if feed.errors.any? %>
@@ -27,7 +28,7 @@
       <%= form.select :access_token_id, options_for_select(access_token_options, feed.access_token_id),
                       { prompt: "Choose access token..." },
                       { class: "form-select",
-                        data: { action: "change->groups#refresh" } } %>
+                        data: { action: "change->groups#refresh", groups_target: "tokenSelect" } } %>
       <div class="form-text">Select the Freefeed access token to use for posting</div>
     <% else %>
       <select name="feed[access_token_id]" class="form-select" disabled>
