--- a/app/views/settings/access_token_groups/index.turbo_stream.erb
+++ b/app/views/settings/access_token_groups/index.turbo_stream.erb
@@ -12,7 +12,7 @@
       <% end %>
     </select>
     <div class="form-text" data-groups-target="helpText">
-      <%= @help_text %>
+      Select the Freefeed group
     </div>
     <div class="invalid-feedback">Select a target group.</div>
   </div>
