--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -39,7 +39,7 @@
                 <i class="bi bi-trash me-2"></i>
                 Group Purge
               </h5>
-              <p class="card-text">Withdraw all posts from a FreeFeed group</p>
+              <p class="card-text">Withdraw all posts from a specified FreeFeed group</p>
               <%= link_to "Purge Group", new_admin_purge_path, class: "btn btn-danger" %>
             </div>
           </div>
