--- a/app/views/feeds/_reposting_form.html.erb
+++ b/app/views/feeds/_reposting_form.html.erb
@@ -7,8 +7,7 @@
     <div data-controller="groups"
          data-groups-loading-text-value="Loading..."
          data-groups-default-text-value="Select the Freefeed group"
-         data-groups-endpoint-value="<%= settings_access_token_groups_path(':access_token_id') %>"
-         data-groups-scope-value="feed">
+         data-groups-endpoint-value="<%= settings_access_token_groups_path(':access_token_id') %>">
       <%= form_with model: feed, class: "needs-validation", novalidate: true do |form| %>
   <%= hidden_field_tag :section, "reposting" %>
   <% if feed.errors.any? %>
