Remove unnecessary button

--- a/app/views/feeds/purges/show.html.erb
+++ b/app/views/feeds/purges/show.html.erb
@@ -1,8 +1,6 @@
 <% content_for :title, "Confirm Purge" %>
 
-<%= page_header "Confirm Purge" do %>
-  <%= link_to "Cancel", feed_path(@feed), class: "btn btn-outline-secondary" %>
-<% end %>
+<%= page_header "Confirm Purge" %>
 
 <div class="card">
   <div class="card-body">
