--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -111,10 +111,8 @@
 
 <% if @feed.target_group.present? %>
   <div class="mt-4">
+    <h3 class="mb-3">Danger Zone</h3>
     <div class="card border-danger">
-      <div class="card-header bg-danger text-white">
-        <h5 class="card-title mb-0">Danger Zone</h5>
-      </div>
       <div class="card-body">
         <div class="d-flex justify-content-between align-items-center">
           <div>
