Make posts table betterer

--- a/app/views/shared/_posts_table.html.erb
+++ b/app/views/shared/_posts_table.html.erb
@@ -6,12 +6,11 @@
         <% unless local_assigns[:hide_feed_column] %>
           <th class="feed-column">Feed</th>
         <% end %>
-        <th class="published-column text-center"><i class="bi bi-calendar3"></i></th>
-        <th class="count-column text-center"><i class="bi bi-paperclip"></i></th>
-        <th class="count-column text-center"><i class="bi bi-chat-dots"></i></th>
-        <th class="status-column text-center"><i class="bi bi-info-circle"></i></th>
-        <th class="source-column">Source</th>
-        <th class="freefeed-column">FreeFeed</th>
+        <th class="published-column text-center" title="Published date"><i class="bi bi-calendar3"></i></th>
+        <th class="count-column text-center" title="Attachments"><i class="bi bi-paperclip"></i></th>
+        <th class="count-column text-center" title="Comments"><i class="bi bi-chat-dots"></i></th>
+        <th class="status-column text-center" title="Status"><i class="bi bi-info-circle"></i></th>
+        <th style="width: 1%;" class="text-center" title="Actions"><i class="bi bi-three-dots-vertical"></i></th>
       </tr>
     </thead>
     <tbody>
@@ -49,21 +48,44 @@
           <td class="narrow-column text-center">
             <%= post_status_icon(post.status) %>
           </td>
-          <td class="narrow-column source-column">
-            <% if post.source_url.present? %>
-              <%= link_to "Source", post.source_url,
-                          target: "_blank",
-                          rel: "noopener",
-                          class: "text-decoration-none" %>
-            <% end %>
-          </td>
-          <td class="narrow-column freefeed-column">
-            <% if post.freefeed_post_id.present? %>
-              <%= link_to "Repost", "#{post.feed.access_token.host}/#{post.feed.target_group}/#{post.freefeed_post_id}",
-                          target: "_blank",
-                          rel: "noopener",
-                          class: "text-decoration-none" %>
-            <% end %>
+          <td style="width: 1%;" class="text-center">
+            <div class="dropdown">
+              <button class="btn btn-sm btn-link text-muted p-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="bi bi-three-dots-vertical"></i>
+              </button>
+              <ul class="dropdown-menu dropdown-menu-end">
+                <% if post.source_url.present? %>
+                  <li>
+                    <%= link_to post.source_url, target: "_blank", rel: "noopener", class: "dropdown-item" do %>
+                      <i class="bi bi-box-arrow-up-right me-2"></i>Source Post
+                    <% end %>
+                  </li>
+                <% end %>
+                <% if post.freefeed_post_id.present? %>
+                  <li>
+                    <%= link_to "#{post.feed.access_token.host}/#{post.feed.target_group}/#{post.freefeed_post_id}",
+                                target: "_blank",
+                                rel: "noopener",
+                                class: "dropdown-item" do %>
+                      <i class="bi bi-box-arrow-up-right me-2"></i>FreeFeed Post
+                    <% end %>
+                  </li>
+                <% end %>
+                <% if policy(post).destroy? %>
+                  <% if post.source_url.present? || post.freefeed_post_id.present? %>
+                    <li><hr class="dropdown-divider"></li>
+                  <% end %>
+                  <li>
+                    <%= button_to post_path(post),
+                                  method: :delete,
+                                  class: "dropdown-item text-danger",
+                                  form: { data: { turbo_confirm: "Withdraw this post? It will be removed from FreeFeed but remain visible here." } } do %>
+                      <i class="bi bi-trash me-2"></i>Withdraw
+                    <% end %>
+                  </li>
+                <% end %>
+              </ul>
+            </div>
           </td>
         </tr>
       <% end %>
