--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -99,8 +99,8 @@
   <h3 class="mb-3">Recent Posts</h3>
   <% if @recent_posts.any? %>
     <%= render "shared/posts_table", posts: @recent_posts, hide_feed_column: true %>
-    <div class="text-center mt-3">
-      <%= link_to "View All Posts", posts_path, class: "btn btn-outline-primary" %>
+    <div class="mt-2">
+      <%= link_to "View All Posts", posts_path(feed_id: @feed.id), class: "btn btn-sm btn-outline-primary" %>
     </div>
   <% else %>
     <div class="text-center py-4">
