--- a/app/views/shared/_posts_table.html.erb
+++ b/app/views/shared/_posts_table.html.erb
@@ -10,7 +10,7 @@
         <th class="count-column text-center" title="Attachments"><i class="bi bi-paperclip"></i></th>
         <th class="count-column text-center" title="Comments"><i class="bi bi-chat-dots"></i></th>
         <th class="status-column text-center" title="Status"><i class="bi bi-info-circle"></i></th>
-        <th style="width: 1%;" class="text-center" title="Actions"><i class="bi bi-three-dots-vertical"></i></th>
+        <th style="width: 1%;" class="text-center"></th>
       </tr>
     </thead>
     <tbody>
