--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -28,7 +28,7 @@
                   <% if feed.enabled? %>
                     <i class="bi bi-check-circle-fill text-success me-1"></i>
                   <% else %>
-                    <i class="bi bi-x-circle-fill text-danger me-1"></i>
+                    <i class="bi bi-x-circle text-muted me-1"></i>
                   <% end %>
                   <%= feed.state.capitalize %>
                 </td>
