--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,9 +25,7 @@
       <div class="list-group-item">
         <strong>Content:</strong>
         <div class="mt-2">
-          <div class="mb-2 p-3 border rounded bg-light">
-            <%= simple_format(@post.content) %>
-          </div>
+          <%= simple_format(@post.content) %>
         </div>
       </div>
 
@@ -104,23 +102,40 @@
         </div>
       <% end %>
 
-      <div class="list-group-item">
-        <strong>Technical Details:</strong>
-        <div class="mt-2">
-          <div class="row">
-            <div class="col-md-6">
-              <small class="text-muted">Post ID:</small> <code><%= @post.id %></code><br>
-              <small class="text-muted">UID:</small> <code><%= @post.uid %></code><br>
-              <small class="text-muted">Feed Entry ID:</small> <code><%= @post.feed_entry_id %></code>
-            </div>
-            <div class="col-md-6">
-              <small class="text-muted">Created:</small> <%= long_time_tag(@post.created_at) %><br>
-              <small class="text-muted">Updated:</small> <%= long_time_tag(@post.updated_at) %><br>
-              <% if @post.freefeed_post_id.present? %>
-                <small class="text-muted">FreeFeed Post ID:</small> <code><%= @post.freefeed_post_id %></code>
-              <% end %>
-            </div>
+    </div>
+
+    <div class="mt-3">
+      <a data-bs-toggle="collapse" href="#technicalDetails" role="button" aria-expanded="false" aria-controls="technicalDetails" class="text-muted">
+        More...
+      </a>
+    </div>
+
+    <div class="collapse mt-3" id="technicalDetails">
+      <div class="list-group">
+        <div class="list-group-item">
+          <strong>Post ID:</strong> <code><%= @post.id %></code>
+        </div>
+
+        <div class="list-group-item">
+          <strong>UID:</strong> <code><%= @post.uid %></code>
+        </div>
+
+        <div class="list-group-item">
+          <strong>Feed Entry ID:</strong> <code><%= @post.feed_entry_id %></code>
+        </div>
+
+        <% if @post.freefeed_post_id.present? %>
+          <div class="list-group-item">
+            <strong>FreeFeed Post ID:</strong> <code><%= @post.freefeed_post_id %></code>
           </div>
+        <% end %>
+
+        <div class="list-group-item">
+          <strong>Created:</strong> <%= long_time_tag(@post.created_at) %>
+        </div>
+
+        <div class="list-group-item">
+          <strong>Updated:</strong> <%= long_time_tag(@post.updated_at) %>
         </div>
       </div>
     </div>
