--- a/app/views/passwords/new.html.erb
+++ b/app/views/passwords/new.html.erb
@@ -12,7 +12,7 @@
 
         <%= form_with url: passwords_path, local: true do |form| %>
           <div class="mb-3">
-            <%= form.label :email_address, "Email Address", class: "form-label" %>
+            <%= form.label :email_address, "Email Address", class: "form-label fw-bold" %>
             <%= form.email_field :email_address, required: true, autofocus: true, autocomplete: "username", placeholder: "Enter your email address", value: params[:email_address], class: "form-control" %>
           </div>
           
