--- a/app/views/settings/email_updates/edit.html.erb
+++ b/app/views/settings/email_updates/edit.html.erb
@@ -8,11 +8,12 @@
   <div class="col-6">
     <%= form_with model: @user, url: settings_email_update_path, method: :patch, local: true do |form| %>
       <div class="mb-3">
-        <p>Current email: <strong class="mx-2"><%= @user.email_address %></strong></p>
+        <%# TBD: Use readonly field with a label %>
+        <p><span class="fw-bold">Current email:</span><span class="mx-2"><%= @user.email_address %></span></p>
       </div>
 
       <div class="mb-3">
-        <%= form.label :email_address, "New email:", class: "form-label" %>
+        <%= form.label :email_address, "New email:", class: "form-label fw-bold" %>
         <%= form.email_field :email_address, value: "", class: "form-control", placeholder: "Enter new email address" %>
       </div>
 
