--- a/app/views/settings/access_tokens/edit.html.erb
+++ b/app/views/settings/access_tokens/edit.html.erb
@@ -6,18 +6,16 @@
 <div class="row">
   <div class="col-lg-6">
     <div class="alert alert-warning">
-      <strong>Replace Token:</strong> This updates the token value and name. We replace the current token and trigger validation automatically.
+      There are N feed using this token.
+      List feed names
+      Make sure the new token have access to each group on this list. Otherwise feeds will remain inactive.
     </div>
 
-    <div class="card">
-      <div class="card-body">
-        <%= render "form",
-                   access_token: @access_token,
-                   token_label: "New Freefeed Access Token",
-                   token_placeholder: "Paste your new Freefeed access token here",
-                   token_value: "",
-                   submit_text: "Replace Token" %>
-      </div>
-    </div>
+    <%= render "form",
+               access_token: @access_token,
+               token_label: "New Freefeed Access Token",
+               token_placeholder: "Paste your new Freefeed access token here",
+               token_value: "",
+               submit_text: "Replace Token" %>
   </div>
 </div>
