Add USers link to the Admin Panel

--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -10,6 +10,19 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">
+                <i class="bi bi-people me-2"></i>
+                Users
+              </h5>
+              <p class="card-text">Manage user accounts and permissions</p>
+              <%= link_to "View Users", admin_users_path, class: "btn btn-primary" %>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">
                 <i class="bi bi-calendar-event me-2"></i>
                 System Events
               </h5>
