--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -114,9 +114,6 @@
 <h3 class="mt-4 mb-3">Actions</h3>
 
 <div class="d-flex gap-2">
-  <%= link_to "Change Email", edit_admin_user_email_update_path(@user), class: "btn btn-outline-primary" %>
-  <%= button_to "Reset Password", admin_user_password_reset_path(@user),
-                method: :post,
-                class: "btn btn-outline-secondary",
-                form: { data: { turbo_confirm: "Send password reset email to #{@user.email_address}?" } } %>
+  <%= link_to "Change Email", edit_admin_user_email_update_path(@user), class: "btn btn-outline-secondary" %>
+  <%= link_to "Reset Password", admin_user_password_reset_path(@user), class: "btn btn-outline-secondary" %>
 </div>
